add googletest environment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,8 @@ set(CMAKE_CXX_STANDARD 17)
 project(CodeGenerator)
 
 add_subdirectory(core/)
-add_executable(main main.cpp)
-target_link_libraries(main core)
+add_subdirectory(tests/)
+add_subdirectory("3rd party/")
+
+add_executable(CodeGenerator main.cpp)
+target_link_libraries(CodeGenerator core)
