--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -26,12 +26,29 @@ set(SRC
         generator/FileGenerator.h
         generator/FunctionGenerator.h
 
-        "../3rd party/fmt/src/format.cc"
-        "../3rd party/fmt/src/os.cc"
-
-        generator/LanguageHelper.h CPP/CPPHelper.cpp CPP/CPPHelper.h CPP/CPPFunctionGenerator.cpp CPP/CPPFunctionGenerator.h enums/LanguageType.h tokens/Namespace.h tokens/Object.h enums/ObjectType.h generator/ClassGenerator.h CPP/CPPClassGenerator.cpp CPP/CPPClassGenerator.h enums/ValueWrapperType.h CPP/DependencyResolver.cpp CPP/DependencyResolver.h CPP/CPPCodeGenerator.cpp CPP/CPPCodeGenerator.h tokens/Object.cpp CPP/Dependency.cpp CPP/Dependency.h CPP/DependencyMap.cpp CPP/DependencyMap.h)
+        generator/LanguageHelper.h
+        CPP/CPPHelper.cpp
+        CPP/CPPHelper.h
+        CPP/CPPFunctionGenerator.cpp
+        CPP/CPPFunctionGenerator.h
+        enums/LanguageType.h
+        tokens/Namespace.h
+        tokens/Object.h
+        enums/ObjectType.h
+        generator/ClassGenerator.h
+        CPP/CPPClassGenerator.cpp
+        CPP/CPPClassGenerator.h
+        enums/ValueWrapperType.h
+        CPP/DependencyResolver.cpp
+        CPP/DependencyResolver.h
+        CPP/CPPCodeGenerator.cpp
+        CPP/CPPCodeGenerator.h
+        tokens/Object.cpp
+        CPP/Dependency.cpp
+        CPP/Dependency.h
+        CPP/DependencyMap.cpp
+        CPP/DependencyMap.h)
 
 add_library(core ${SRC})
 
-target_include_directories(core PUBLIC  "../3rd party/rapidjson/include")
-target_include_directories(core PUBLIC  "../3rd party/fmt/include")
+target_link_libraries(core PUBLIC modules)
